syntax = "proto3";

package comment;

service Comment {
	rpc New(NewRequest) returns (NewResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
}

message Item {
	string id = 1;
	string post = 2;
	string author = 3;
	string message = 4;
	int64 created = 5;
}

message NewRequest {
	string post = 1;
	string author = 2;
	string message = 3;
}

message NewResponse {
	Item comment = 1;
}

message ListRequest {
	string post = 1;
}

message ListResponse {
	repeated Item comments = 1;
}